--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019.09.10, v3.0.0
+
+feature:
+- (version) drop support of node < 8
+- (package) pkg-up v3.1.0
+- (package) fullstore v2.0.2
+
+
 2018.06.14, v2.0.3
 
 feature:
