--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2020.04.28, v4.0.0
+
+feature:
+- (vesion-io) promisify
+- (package) putout v7.23.0
+- (package) eslint-plugin-putout v3.7.1
+- (package) eslint-plugin-node v11.1.0
+- (package) eslint v6.8.0
+- (package) madrun v5.5.0
+- (package) readjson v2.0.1
+- (package) writejson v3.0.0
+- (package) try-catch v3.0.0
+
+
 2019.09.10, v3.0.0
 
 feature:
