chore: version-io: v6.1.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2026.02.03, v6.1.1
+
+fix:
+- b948ef1 version: no overrides
+
+2026.02.03, v6.1.1
+
+fix:
+- b948ef1 version: no overrides
+
 2026.02.02, v6.1.0
 
 feature:
