chore: version-io: v6.1.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2026.02.03, v6.1.2
+
+fix:
+- f2cfa07 ignore: add lock
+
+2026.02.03, v6.1.2
+
+fix:
+- f2cfa07 ignore: add lock
+
 2026.02.03, v6.1.1
 
 fix:
